# NextGen-Disk-Cache

./: .gitignore  BASE-COMMIT.txt  CHANGELOG.txt  CMakeLists.txt  GITHUB.md  LICENSE.Archost-DiskCacheEnabler.txt  LICENSE.SKSE64.txt  LICENSE.txt  PACKAGE-NOTICE.txt  PATCH-MANIFEST.md  README.md  build.ps1  package-release.ps1
.github/workflows/: build-release.yml
docs/: 1.2.0-AUDIT.md  1.2.0-TECHNICAL-NOTES.md  CHANGELOG-1.2-ENTRY.txt  README-1.2-INSERT.md  SAFETY-AUDIT-2026-07-21.md
fomod/: ModuleConfig.xml  info.xml
package/SKSE/Plugins/: NextGenDiskCache.ini
profiles/Balanced/: NextGenDiskCache.ini
profiles/ExperimentalWarmCache/: NextGenDiskCache.ini
profiles/HighEnd/: NextGenDiskCache.ini
profiles/Minimal/: NextGenDiskCache.ini
profiles/SafeDefault/: NextGenDiskCache.ini
src/: DirectStorageBackend.cpp  DirectStorageBackend.h  IatHook.cpp  IatHook.h  main.cpp
tools/: apply_1_2.py  validate_rc.py
